<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img1"
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:contentDescription="@string/imgDesc"
            android:padding="15sp"
            app:srcCompat="@drawable/tool1" />

        <TextView
            android:id="@+id/img1Txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15sp"
            android:text="@string/Img1txt"
            android:textSize="30sp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img2"
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:contentDescription="@string/imgDesc"
            android:padding="15sp"
            app:srcCompat="@drawable/tool2" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15sp"
            android:text="@string/Img2txt"
            android:textSize="30sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:contentDescription="@string/imgDesc"
            android:padding="15sp"
            app:srcCompat="@drawable/tool3" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15sp"
            android:text="@string/Img3txt"
            android:textSize="30sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:contentDescription="@string/imgDesc"
            android:padding="15sp"
            app:srcCompat="@drawable/tool4" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15sp"
            android:text="@string/Img4txt"
            android:textSize="30sp" />
    </TableRow>
</TableLayout>